Fix Recaptcha and overlapping footer

--- a/scad_theme/css/site.css
+++ b/scad_theme/css/site.css
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-    margin-bottom: 550px;
+    margin-bottom: 700px;
     /* Margin bottom by footer height */
 }
 
